src/manifests/ainur/pi-netboot/kube-vip.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-vip-tftp
  namespace: ainur-netboot
spec:
  selector:
    matchLabels:
      app: kube-vip-tftp
  template:
    metadata:
      labels:
        app: kube-vip-tftp
    spec:
      serviceAccountName: kube-vip
      hostNetwork: true
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: kube-vip
          image: ghcr.io/kube-vip/kube-vip:v1.0.2
          args: ["manager"]
          securityContext:
            privileged: true
