src/manifests/ainur/pi-netboot/nfs-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nfs
spec:
  selector:
    matchLabels:
      app: netboot
      component: nfs
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: netboot
        component: nfs
    spec:
      # nodeSelector:
      #   kidd.network/role: "control-plane"
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      hostPID: true
      containers:
        - name: nfs
          image: andrewkidd/nfs-server:v2.2.7
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh","-c","mkdir -p /var/lib/nfs/rpc_pipefs"]
          ports:
            - name: rpcbind-tcp
              containerPort: 111
              protocol: TCP
            - name: rpcbind-udp
              containerPort: 111
              protocol: UDP
            - name: nfs-tcp
              containerPort: 2049
              protocol: TCP
            - name: nfs-udp
              containerPort: 2049
              protocol: UDP
            - name: lockd-tcp
              containerPort: 4045
              protocol: TCP
            - name: lockd-udp
              containerPort: 4045
              protocol: UDP
            - name: statd-tcp
              containerPort: 32765
              protocol: TCP
            - name: statd-udp
              containerPort: 32765
              protocol: UDP
            - name: mountd-tcp
              containerPort: 32767
              protocol: TCP
            - name: mountd-udp
              containerPort: 32767
              protocol: UDP
          volumeMounts:
            - name: os
              mountPath: /mnt/nfsshare
            - name: nfs-state
              mountPath: /var/lib/nfs
        # - name: dmesg-tailer
        #   image: busybox
        #   securityContext:
        #     privileged: true
        #   command: ["/bin/sh","-c"]
        #   args:
        #     - |
        #       while true; do
        #         dmesg -c
        #         sleep 1
        #       done
        # - name: tcpdump
        #   image: alpine
        #   securityContext:
        #     privileged: true
        #   command: ["sh","-c"]
        #   args:
        #     - |
        #       apk add --no-cache tcpdump
        #       tcpdump -i any -nn -vv "(host 192.168.1.59 or host 192.168.1.52) and (port 111 or port 2049 or port 4045 or port 32765 or port 32767)"
      volumes:
        - name: os
          persistentVolumeClaim:
            claimName: pi-netboot-os
        - name: modules
          hostPath:
            path: /lib/modules
            type: Directory
        - name: nfs-state
          persistentVolumeClaim:
            claimName: pi-netboot-nfs-state
